﻿Release Notes
=============

Version 1.4.0
-------------
- Improvement: application can start in different mode:
		- normal mode
		- tray area (same logo of application)
		- smart view
- Improvement: during initialization of application:
		- optional check for version
		- optional autodetectcan be run
- Improvement: if firefox is running when profile is applyed, it is shutdown and restarted.
- Bug fix: Immediate proxy settings changing (Chrome bug) (Tnx to anonymous user who suggested solution too!)
- Improvement: introduced Options windows to modify application configuraiton.
- Improvement: during execution of profile or autodectect is no possibile anymore:
		- Enable/disable network card
		- Save/delete/create/duplicate profile
		- run profile or autodetect	
- Bug fix: autodetect algo now order profile by network card type and speed.
- Improvement: add more messages during autodetect
- Improvement: introduced profile reorder for profiles: now it is possibile to define the order in which
	profiles are displayed.

Version 1.3.0
-------------
- Bug fix: introduced minimun size to avoid ribbon problem
- Improvement: removed firt ribbon panel. Now all operations about profile are in same place
- Improvement: add profile list button in ribbon panel to display list of profile
- Bug fix: when in smart view, ribbon panel were display
- Bug fix: in some case autodetect does not work
- Bug fix: in some case profile save does not work
- Minor Improvement: refresh network card status is reflected on current opened profile windows
- Minor improvement: internal refactoring

Version 1.2.0
-------------

- MAJOR IMPROVEMENT: introduced new algorithm for profile's auto selection 
- MAJOR IMPROVEMENT: UI restyling. In this release it was used a ribbon control instead of the toolbar. This control contains many things:
	a button's list to run profiles (tab Profiles, panel Run)
